--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -8,9 +8,25 @@
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
+  color:white;
   background-color: black;
+  padding:0;
+  display:flex;
+  width: 100vw;
+  height:100vh;
+  justify-content: center;
+  align-items: center;
   
 }
+
+
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  width:80%;
+  overflow: hidden;
+}
+
 
 
 main {
@@ -18,21 +34,6 @@ main {
   color: #fff;
 }
 
-body{
-  color:white;
-}
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 50px;
-  overflow: hidden;
-}
-
-
-header{
-    background-image: url('assets/lightsNight.jpg');
-}
 
 
 .imageDrink{
