--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,139 +1,22 @@
 @import 'setup';
-// @import 'variables';
-// @import 'header';
-// @import 'footer';
-// @import 'mediaQueries';
+@import 'variables';
 
+@import 'header';
+@import 'main';
+@import 'footer';
 
-body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-  color:white;
-  background-color: black;
-  padding:0;
-  
-}
-
-
-.wrapper {
-  max-width: 1280px;
-  margin: 0 auto;
-  width:80%;
-  overflow: hidden;
-
-}
+@import 'mediaqueries';
 
 
 
-main {
-  background-color: #333;
-  color: #fff;
-}
-
-
-header{
-  background-image: url('assets/lightsNight.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
 
 
 
-.imageDrink{
-  width:35%;
-  margin: 0 auto;
-  background-color: white;
-
-
-  img{
-  display: block;
-  width: 100%;
-  margin: 0 auto;
-  padding: 20px 20px 100px 20px;
-  }
-}
-
-
-h1,
-h2 {
-  text-align: center;
-  color: #fff;
-  font-size: 70px;
-  letter-spacing: 2.5px;
-  margin:50px 0;
-  font-family: 'Shadows Into Light', cursive;
-}
-
-h1{
-  text-transform: uppercase;
-  color: #F4D35E;
-}
-
-h2{
-  font-size: 45px;
-  
-}
-
-ul {
-  list-style-type: none;
-  margin: 0 20px;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
-
-
-  li {
-    
-    box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    margin: 25px 0;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-
-.userChoice {
-  background-color: #f78764;
-  width:70%;
-  display:flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin:100px auto;
-  
-  border-radius: 20px;
-}
-
-.button{
-  background-color: black;
-  text-align: center;
-  margin:30px 0;
-  padding:20px 0;
-  text-transform: uppercase;
-  width:40%;
-  border-radius: 20px;
-  box-shadow: 0 0 10px 2px;
-  font-weight: bold;
-}
-
-.button p{
-  font-size: 25px;
-  
-}
-
-.button:hover{
-  background-color: #F4D35E;
-  cursor: pointer;
-  color:black;
-  
-}
 
 
 
-.showHere{
-  display: none;
-}
+
+
+
+
+
