--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,7 @@ body {
 h1,
 h2 {
   text-align: center;
-  letter-spacing: 2.5px;
+  letter-spacing: 3px;
   margin: 40px 0;
   font-family: "Shadows Into Light", cursive;
 }
@@ -189,11 +189,13 @@ h1 {
   text-transform: uppercase;
   color: #F4D35E;
   font-size: 7rem;
+  text-shadow: 5px 5px 5px black;
 }
 
 h2 {
   font-size: 5rem;
   color: #fff;
+  text-shadow: 5px 5px 5px black;
 }
 
 p {
@@ -202,13 +204,15 @@ p {
 }
 
 header {
-  background-image: url("assets/lightsNight.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(245, 246, 252, 0.2)), to(rgba(255, 255, 255, 0.3))), url(assets/lightsNight.jpg);
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.2), rgba(255, 255, 255, 0.3)), url(assets/lightsNight.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .userChoice {
+  background-color: rgba(247, 135, 100, 0.7);
   width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,7 +242,7 @@ header {
 }
 
 .button:hover {
-  background-color: #f78764;
+  background-color: #F4D35E;
   cursor: pointer;
   color: black;
 }
