--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -19,18 +19,10 @@ header {
     border-radius: 20px;
 }
 
-
 .button{
-    background-color: black;
-    text-align: center;
-    margin:30px 0;
-    padding:20px 0;
-    text-transform: uppercase;
-    width:40%;
-    border-radius: 20px;
-    box-shadow: 0 0 10px 2px;
-    font-weight: bold;
-}
+    @include buttons();
+
+ }
 
 .button:hover{
     background-color: $primaryColor;
