js/scss display changes

--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -1,6 +1,6 @@
+// mixins
 
-
-@mixin buttons(){
+@mixin button(){
         background-color: black;
         text-align: center;
         margin:30px 0;
