--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,30 +1,60 @@
 // Main styles
 
+main {
+    padding-bottom: 50px;
+}
+
+
+.cocktailName h2{
+    color: $secondaryColor;
+    margin: 70px 0;
+}
+
+
+.gridContainer {
+    margin: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    grid-gap: 50px;
+}
+
+
+
+.gridItem {
+    margin: 20px auto;
+
+    h3{
+        font-family: $headingFont;
+        font-size: 4rem;
+        margin:0;
+        text-align: center;
+    }
+}
+
+.gridItem p{
+    font-size: 2rem;
+    line-height: 40px;
+}
 
 ul {
-    list-style-type: none;
-    margin: 0 20px;
+    // margin: 0;
     padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 10px;
+    list-style-type: none;
+   
 
 
     li {
-        box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.1);
-        border-radius: 3px;
-        margin: 25px 0;
-        padding-bottom: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        margin: 30px 0;
         }
     }
 
+    ul li:before {
+        content: '✓';
+      }
 
 .imageDrink {
-    width:35%;
-    margin: 0 auto;
+    width:100%;
+    // margin: 0 auto;
     background-color: white;
 
 
