--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block;
 }
@@ -247,38 +248,55 @@ header {
   color: black;
 }
 
-ul {
-  list-style-type: none;
+main {
+  padding-bottom: 50px;
+}
+
+.cocktailName h2 {
+  color: #f78764;
+  margin: 70px 0;
+}
+
+.gridContainer {
   margin: 0 20px;
-  padding: 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  -ms-grid-columns: (minmax(450px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-gap: 50px;
+}
+
+.gridItem {
+  margin: 20px auto;
+}
+
+.gridItem h3 {
+  font-family: "Shadows Into Light", cursive;
+  font-size: 4rem;
+  margin: 0;
+  text-align: center;
+}
+
+.gridItem p {
+  font-size: 2rem;
+  line-height: 40px;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 ul li {
-  -webkit-box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.1);
-  border-radius: 3px;
-  margin: 25px 0;
-  padding-bottom: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: 30px 0;
+}
+
+ul li:before {
+  content: '✓';
 }
 
 .imageDrink {
-  width: 35%;
-  margin: 0 auto;
+  width: 100%;
   background-color: white;
 }
 
@@ -294,7 +312,7 @@ footer p {
   text-align: center;
   color: #f78764;
   letter-spacing: 1px;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 @media (max-width: 1024px) {
