--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,7 +1,7 @@
 // header styles
 
 header {
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.2), rgba(255, 255, 255, 0.3)), url(assets/lightsNight.jpg);
+    background-image: url(assets/lightsNight.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
