--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,8 +205,7 @@ p {
 }
 
 header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(245, 246, 252, 0.2)), to(rgba(255, 255, 255, 0.3))), url(assets/lightsNight.jpg);
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.2), rgba(255, 255, 255, 0.3)), url(assets/lightsNight.jpg);
+  background-image: url(assets/lightsNight.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -248,10 +247,6 @@ header {
   color: black;
 }
 
-main {
-  padding-bottom: 50px;
-}
-
 .cocktailName h2 {
   color: #f78764;
   margin: 70px 0;
@@ -263,23 +258,29 @@ main {
   display: grid;
   -ms-grid-columns: (minmax(450px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-  grid-gap: 50px;
+  grid-gap: 10px;
 }
 
 .gridItem {
-  margin: 20px auto;
+  margin: 30px auto;
+  padding-bottom: 30px;
 }
 
 .gridItem h3 {
   font-family: "Shadows Into Light", cursive;
   font-size: 4rem;
-  margin: 0;
+  margin: 30px 0;
   text-align: center;
+}
+
+.gridItem1 {
+  padding-top: 60px;
 }
 
 .gridItem p {
   font-size: 2rem;
   line-height: 40px;
+  text-align: center;
 }
 
 ul {
@@ -288,7 +289,7 @@ ul {
 }
 
 ul li {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 ul li:before {
@@ -296,7 +297,7 @@ ul li:before {
 }
 
 .imageDrink {
-  width: 100%;
+  width: 70%;
   background-color: white;
 }
 
@@ -304,7 +305,8 @@ ul li:before {
   display: block;
   width: 100%;
   margin: 0 auto;
-  padding: 20px 20px 100px 20px;
+  padding: 20px 20px 80px 20px;
+  opacity: 0.8;
 }
 
 footer p {
