--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -28,9 +28,6 @@
     }
 }
 
-.gridItem1 {
-    padding-top:60px;
-}
 
 .gridItem p{
     font-size: 2rem;
@@ -70,8 +67,13 @@ ul {
     }
 }
 
-    
 
-// .showHere {
-//     display: none;
-// }
+.gridItem1,
+.gridItem2 {
+    width:100%;
+    margin-bottom: 100px;
+    margin: 0 auto;
+    width: 70%;
+    padding: 0;
+    margin-bottom: 100px;
+}
