--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,7 +1,7 @@
 // footer styles
 
 footer p {
-    background-color: black;
+    // background-color: black;
     text-align: center;
     color: $secondaryColor;
     letter-spacing: 1px;
