--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,10 +1,11 @@
 // header styles
 
 header {
-    background-image: url(assets/lightsNight.jpg);
+    // background-image: url(assets/lightsNight.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    // background-attachment: fixed;
 }
 
 
@@ -22,10 +23,18 @@ header {
 .button{
     @include button();
 
- }
+}
 
 .button:hover{
     background-color: $primaryColor;
     cursor: pointer;
     color:black;
+}
+
+body {
+    background-image: url(assets/lightsNight.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
