--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -10,7 +10,7 @@
 .gridContainer {
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     grid-gap: 10px;
 }
 
@@ -18,7 +18,6 @@
 
 .gridItem {
     margin: 30px auto;
-    padding-bottom: 30px;
     
 
     h3{
@@ -55,14 +54,14 @@ ul li:before {
 
 .imageDrink {
     width:75%;
-    background-color: white;
+    background-color:rgb(255, 255, 240);
 
 
     img {
         display: block;
         width: 100%;
         margin: 0 auto;
-        padding: 20px 20px 80px 20px;
+        padding: 20px 20px 100px 20px;
         opacity:0.8;
 
     }
