--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -10,6 +10,28 @@
     }
 }
 
+@media(max-width: 900px){
+    .gridContainer {
+        width: 75%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .gridItem {
+        margin: 20px auto;
+        width:100%;
+    }
+
+    .gridItem h3{
+        margin: 20px 0;
+    }
+
+    .gridItem.button{
+        width:80%;
+    }
+
+}
+
 
 @media(max-width: 650px){
     h1 {
@@ -22,6 +44,24 @@
 
     .button {
         width: 70%;
+    }
+    .gridItem.button{
+        width:100%;
+    
+    }
+
+
+    .gridContainer {
+        margin: 0 auto;
+        display: block;
+        width:95%;
+        
+    }
+
+    .gridItem {
+        margin: 50px auto;
+        padding: 0;
+        
     }
 
     footer p {
@@ -36,8 +76,12 @@
     }
 
     h2 {
-        font-size: 4rem;
+        font-size: 4.3rem;
         margin:0;
+    }
+
+    .gridItem h3{
+        font-size: 3.5rem; 
     }
 
     .button {
@@ -57,10 +101,15 @@
     }
 
     h2 {
-        font-size: 3rem;
+        font-size: 3.6rem;
     }
 
     p {
+        font-size: 2rem;
+
+    }
+
+    ul li { 
         font-size: 2rem;
 
     }
