--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,14 +256,13 @@ p {
   margin: 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  -ms-grid-columns: (minmax(400px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 10px;
 }
 
 .gridItem {
   margin: 30px auto;
-  padding-bottom: 30px;
 }
 
 .gridItem h3 {
@@ -295,14 +294,14 @@ ul li:before {
 
 .imageDrink {
   width: 75%;
-  background-color: white;
+  background-color: ivory;
 }
 
 .imageDrink img {
   display: block;
   width: 100%;
   margin: 0 auto;
-  padding: 20px 20px 80px 20px;
+  padding: 20px 20px 100px 20px;
   opacity: 0.8;
 }
 
@@ -335,6 +334,24 @@ footer p {
   }
 }
 
+@media (max-width: 900px) {
+  .gridContainer {
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .gridItem {
+    margin: 20px auto;
+    width: 100%;
+  }
+  .gridItem h3 {
+    margin: 20px 0;
+  }
+  .gridItem.button {
+    width: 80%;
+  }
+}
+
 @media (max-width: 650px) {
   h1 {
     font-size: 6rem;
@@ -344,6 +361,18 @@ footer p {
   }
   .button {
     width: 70%;
+  }
+  .gridItem.button {
+    width: 100%;
+  }
+  .gridContainer {
+    margin: 0 auto;
+    display: block;
+    width: 95%;
+  }
+  .gridItem {
+    margin: 50px auto;
+    padding: 0;
   }
   footer p {
     font-size: 1.6rem;
@@ -355,8 +384,11 @@ footer p {
     font-size: 5rem;
   }
   h2 {
-    font-size: 4rem;
+    font-size: 4.3rem;
     margin: 0;
+  }
+  .gridItem h3 {
+    font-size: 3.5rem;
   }
   .button {
     width: 85%;
@@ -372,9 +404,12 @@ footer p {
     font-size: 4rem;
   }
   h2 {
-    font-size: 3rem;
+    font-size: 3.6rem;
   }
   p {
+    font-size: 2rem;
+  }
+  ul li {
     font-size: 2rem;
   }
   .userChoice {
